<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.LoginFragment">

        <ImageView
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/left_arrow_drawable" />

        <TextView
            android:id="@+id/loginwelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/welcome_login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/logincap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp"
            android:text="@string/welcome_intro"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginwelcome"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="180dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText

                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:drawablePadding="5dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/person_drawable"
                android:ems="10"
                android:textColorHint="@android:color/darker_gray"

                android:hint="@string/enter_username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passwordbut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:drawablePadding="5dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/key_drawable"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:textColor="@color/white"
                android:background="@drawable/login_background_drawable"
                android:text="@string/log_in"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/gray" />

            <LinearLayout
                android:id="@+id/or_view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <View
                    android:id="@+id/divider7"
                    android:layout_width="12dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView13"
                    android:paddingHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/edittext_background"
                    android:layout_marginEnd="13dp"
                    android:text="@string/or"
                    android:textAlignment="center" />

                <View
                    android:id="@+id/divider8"
                    android:layout_width="12dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider"
                    android:visibility="visible" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/googelogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_background_drawable"
                android:drawableStart="@drawable/google_drawable"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/sign_google"
                android:textColor="@color/black" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>