<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.profile.ProfileFragment">

        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold_click_in_photo_to_change_it"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/profile_IV"
            app:layout_constraintEnd_toEndOf="@+id/profile_IV"
            app:layout_constraintStart_toStartOf="@+id/profile_IV" />

        <ImageView
            android:background="@drawable/profile_background_drawable"
            android:id="@+id/profile_IV"
            android:layout_marginTop="84dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="   name "
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile_IV"
            app:layout_constraintStart_toStartOf="@+id/profile_IV"
            app:layout_constraintTop_toBottomOf="@+id/profile_IV" />

        <View
            android:layout_width="match_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_TV" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="General Info"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/name_TV"
            app:layout_constraintStart_toStartOf="@id/name_TV"
            app:layout_constraintTop_toBottomOf="@id/name_TV" />

        <ImageView
            android:layout_marginStart="20dp"
            android:id="@+id/call_image_view"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <TextView
            android:id="@+id/phone_ET"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="010000000"
            app:layout_constraintTop_toTopOf="@id/call_image_view"
            app:layout_constraintStart_toEndOf="@+id/call_image_view"/>
        <ImageView

            android:layout_marginStart="20dp"
            android:id="@+id/location_image_view"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/map_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_image_view" />
        <TextView
            android:id="@+id/location_ET"
            android:gravity="bottom" 
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test"
            app:layout_constraintTop_toTopOf="@id/location_image_view"
            app:layout_constraintStart_toEndOf="@+id/location_image_view"/>
        <View
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_image_view" />
        <ImageView
            android:id="@+id/settings_image_view"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setting_drawable"
            app:layout_constraintTop_toBottomOf="@id/location_image_view"
            app:layout_constraintStart_toStartOf="@id/location_image_view"/>
        <TextView
            android:id="@+id/settings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/settings_image_view"
            app:layout_constraintStart_toEndOf="@id/settings_image_view"
            android:text="@string/settings"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_drawable"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toTopOf="@id/settings_image_view"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/faq_image_view"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/faq_drawable"
            app:layout_constraintTop_toBottomOf="@id/settings_image_view"
            app:layout_constraintStart_toStartOf="@id/location_image_view"/>
        <TextView
            android:id="@+id/faq_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/faq_image_view"
            app:layout_constraintStart_toEndOf="@id/faq_image_view"
            android:text="@string/faq"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_drawable"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toTopOf="@id/faq_image_view"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/about_us_image_view"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about_us_drawable"
            app:layout_constraintTop_toBottomOf="@id/faq_image_view"
            app:layout_constraintStart_toStartOf="@id/location_image_view"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/about_us_image_view"
            app:layout_constraintStart_toEndOf="@id/about_us_image_view"
            android:text="@string/about_us"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_drawable"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toTopOf="@id/about_us_image_view"
            app:layout_constraintEnd_toEndOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>